@@ -1,10 +1,12 @@
-2007-08-11  Kai Tietz  <kai.tietz@onevision.com>
+2007-09-11  Kai Tietz  <kai.tietz@onevision.com>
 
 	* math/cephes_emath.c: (__emdnorm): Work around
 	negation of unsigned short bug by using xor logic
 	PR/1792793.
 	* tlssup.c: (__dyn_tls_init, __dyn_tls_dtor): Type
 	cast warnings PR/1792786.
+	* misc/gettimeofday.c: (mingw_gettimeofday): New POSIX compatible
+	version of gettimeofday method.
 
 2007-08-10  Kai Tietz  <kai.tietz@onevision.com>
 
